# nucleus

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  effigy.toml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/nucleusd/: Cargo.toml  README.md
apps/nucleusd/src/: cli.rs  command_runner.rs  labels.rs  main.rs  provider_live_read_smoke_evidence.rs  query.rs
crates/nucleus-agent-adapters/: Cargo.toml
crates/nucleus-agent-adapters/src/: codex.rs  codex_runtime.rs  config.rs  credentials.rs  lib.rs  live_registry.rs  persistence.rs  probes.rs  registry.rs  selection.rs  status.rs  swallowtail_codex.rs
crates/nucleus-contract-fixtures/: Cargo.toml
crates/nucleus-contract-fixtures/src/: command_policy.rs  lib.rs  scenarios.rs  scm_forge.rs
crates/nucleus-contract-fixtures/tests/: command_policy_contract.rs  fake_adapter_scenarios.rs  fake_adapter_skeleton.rs  scm_forge_contract.rs
crates/nucleus-engine/: Cargo.toml
crates/nucleus-engine/src/: authority.rs  change_request_prep.rs  checkpoint_diff.rs  codex_runtime_receipts.rs  commands.rs  effects.rs  goal_commands.rs  goal_run_rules.rs  lib.rs  management_projection.rs  management_sync.rs  planning_task_seed.rs  project_commands.rs  projections.rs  repositories.rs  runtime_receipts.rs  scm_work_item_linkage.rs  services.rs  task_agent.rs  task_commands.rs  task_readiness.rs  task_timeline.rs  task_work_items.rs
crates/nucleus-orchestration/: Cargo.toml
crates/nucleus-orchestration/src/: commands.rs  event_store.rs  events.rs  host_identity.rs  lib.rs  projections.rs  receipts.rs  replay.rs  runtime_effect_events.rs  runtime_effect_replay.rs  runtime_effect_retention.rs  runtime_effect_storage.rs  runtime_effect_subscriptions.rs  runtime_effect_transport.rs  streams.rs
crates/nucleus-planning/: Cargo.toml
crates/nucleus-planning/src/: artifacts.rs  exploration.rs  goals.rs  ids.rs  lib.rs  refs.rs  sessions.rs
crates/nucleus-scm-forge/: Cargo.toml
crates/nucleus-scm-forge/src/: auth.rs  capabilities.rs  conflicts.rs  effects.rs  forge.rs  git_inspection.rs  ids.rs  lib.rs  links.rs  observations.rs  registry.rs  reviews.rs  runtime_effects.rs  runtime_events.rs  runtime_states.rs  scm.rs  session_commands.rs  traits.rs  webhooks.rs  work_sessions.rs
crates/nucleus-server/: Cargo.toml
crates/nucleus-server/bindings/: CodexCallbackDiagnosticsDto.ts  CodexCallbackResponseExecutionAttemptDiagnosticDto.ts  CodexDecodeOutcomeDiagnosticDto.ts  CodexIngestionDiagnosticsDto.ts  CodexIngestionObservationDiagnosticDto.ts  CodexInterruptionDiagnosticDto.ts  CodexLiveExecutorAttemptDiagnosticDto.ts  CodexLiveSpawnSmokeDiagnosticsDto.ts  CodexRecoveryExecutionAttemptDiagnosticDto.ts  CodexRecoveryExecutionDiagnosticsDto.ts  CodexStdioFrameIngestionDiagnosticDto.ts  CodexSubscriptionDiagnosticsDto.ts  CodexTransportExecutorAuthorityDiagnosticDto.ts  CodexTransportExecutorDiagnosticsDto.ts  CodexTransportExecutorEnvelopeDiagnosticDto.ts  CodexTurnStartDiagnosticDto.ts  CodexTurnStartDiagnosticsDto.ts  CompletionScmCapturePreparationControlDto.ts  CompletionScmControlDto.ts  CompletionScmReadinessDto.ts  ControlAcceptedMemoryActiveApplyCountsDto.ts  ControlAcceptedMemoryConfidenceCountDto.ts  ControlAcceptedMemoryImportApplyReviewBlockerDto.ts  ControlAcceptedMemoryImportApplyReviewDiagnosticsDto.ts  ControlAcceptedMemoryImportApplyReviewReceiptDto.ts  ControlAcceptedMemoryKindCountDto.ts  ControlAcceptedMemoryProjectionImportApplyBlockerDto.ts  ControlAcceptedMemoryProjectionImportBlockerDto.ts  ControlAcceptedMemoryProjectionImportConflictDto.ts  ControlAcceptedMemoryProjectionImportCountsDto.ts  ControlAcceptedMemoryProjectionImportDiagnosticsDto.ts  ControlAcceptedMemoryProjectionWriteDiagnosticsDto.ts  ControlAcceptedMemoryRetentionCountDto.ts  ControlAcceptedMemoryReviewReadinessCountsDto.ts  ControlAcceptedMemoryReviewReadinessDto.ts  ControlAcceptedMemoryReviewReceiptStorageDiagnosticsDto.ts  ControlAcceptedMemoryReviewReceiptStorageRecordDto.ts  ControlAcceptedMemoryScopeCountDto.ts  ControlAcceptedMemorySourceCountsDto.ts  ControlAcceptedMemoryStatusCountDto.ts  (+110 more)
crates/nucleus-server/src/: accepted_memory_active_apply_admission.rs  accepted_memory_active_apply_admission_tests.rs  accepted_memory_active_apply_diagnostics.rs  accepted_memory_import_apply_review_command.rs  accepted_memory_import_apply_review_command_tests.rs  accepted_memory_import_apply_review_diagnostics.rs  accepted_memory_persistence.rs  accepted_memory_persistence_tests.rs  accepted_memory_projection.rs  accepted_memory_projection_counts.rs  accepted_memory_projection_diagnostics.rs  accepted_memory_projection_export_plan.rs  accepted_memory_projection_export_plan_tests.rs  accepted_memory_projection_file_materialization.rs  accepted_memory_projection_file_materialization_tests.rs  accepted_memory_projection_import_admission.rs  accepted_memory_projection_import_admission_tests.rs  accepted_memory_projection_import_apply_admission.rs  accepted_memory_projection_import_apply_admission_tests.rs  accepted_memory_projection_import_apply_diagnostics.rs  accepted_memory_projection_import_apply_diagnostics_tests.rs  accepted_memory_projection_import_conflicts.rs  accepted_memory_projection_import_conflicts_tests.rs  accepted_memory_projection_import_diagnostics.rs  accepted_memory_projection_import_duplicates.rs  accepted_memory_projection_import_records.rs  accepted_memory_projection_import_validation.rs  accepted_memory_projection_payload.rs  accepted_memory_projection_payload_tests.rs  accepted_memory_projection_policy.rs  accepted_memory_projection_policy_tests.rs  accepted_memory_projection_test_fixtures.rs  accepted_memory_projection_tests.rs  accepted_memory_projection_write_admission.rs  accepted_memory_projection_write_admission_tests.rs  accepted_memory_projection_write_diagnostics.rs  accepted_memory_review_readiness.rs  accepted_memory_review_readiness_tests.rs  accepted_memory_review_receipt_persistence.rs  accepted_memory_review_receipt_storage_diagnostics.rs  (+323 more)
crates/nucleus-tasks/: Cargo.toml
(+3604 files in other folders)
