[workspace]
resolver = "2"
members = [
  "crates/nucleus-core",
  "crates/nucleus-agent-protocol",
  "crates/nucleus-agent-adapters",
  "crates/nucleus-native-harness",
  "crates/nucleus-projects",
  "crates/nucleus-scm-forge",
  "crates/nucleus-tasks",
  "crates/nucleus-workspaces",
  "crates/nucleus-server",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/tom/nucleus"
