[workspace]
resolver = "2"
members = [
  "crates/nucleus-core",
  "crates/nucleus-agent-protocol",
  "crates/nucleus-agent-adapters",
  "crates/nucleus-native-harness",
  "crates/nucleus-command-policy",
  "crates/nucleus-contract-fixtures",
  "crates/nucleus-local-store",
  "crates/nucleus-orchestration",
  "crates/nucleus-engine",
  "crates/nucleus-projects",
  "crates/nucleus-scm-forge",
  "crates/nucleus-tasks",
  "crates/nucleus-workspaces",
  "crates/nucleus-server",
  "apps/nucleusd",
  "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/tom/nucleus"
