[package]
name = "nucleusd"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nucleusd"
path = "src/main.rs"

[dependencies]
nucleus-command-policy = { path = "../../crates/nucleus-command-policy" }
nucleus-core = { path = "../../crates/nucleus-core" }
nucleus-engine = { path = "../../crates/nucleus-engine" }
nucleus-local-store = { path = "../../crates/nucleus-local-store" }
nucleus-orchestration = { path = "../../crates/nucleus-orchestration" }
nucleus-projects = { path = "../../crates/nucleus-projects" }
nucleus-server = { path = "../../crates/nucleus-server" }
nucleus-tasks = { path = "../../crates/nucleus-tasks" }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
