[package]
name = "nucleus-contract-fixtures"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
nucleus-command-policy = { path = "../nucleus-command-policy" }
nucleus-scm-forge = { path = "../nucleus-scm-forge" }
nucleus-tasks = { path = "../nucleus-tasks" }
