[package]
name = "nucleus-orchestration"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nucleus-core = { path = "../nucleus-core" }
nucleus-command-policy = { path = "../nucleus-command-policy" }
nucleus-scm-forge = { path = "../nucleus-scm-forge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
