[package]
name = "nucleus-planning"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nucleus-core = { path = "../nucleus-core" }
nucleus-projects = { path = "../nucleus-projects" }
nucleus-tasks = { path = "../nucleus-tasks" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
