[package]
name = "nucleus-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nucleus-agent-protocol = { path = "../nucleus-agent-protocol" }
nucleus-command-policy = { path = "../nucleus-command-policy" }
nucleus-core = { path = "../nucleus-core" }
nucleus-engine = { path = "../nucleus-engine" }
nucleus-local-store = { path = "../nucleus-local-store" }
nucleus-native-harness = { path = "../nucleus-native-harness" }
nucleus-orchestration = { path = "../nucleus-orchestration" }
nucleus-projects = { path = "../nucleus-projects" }
nucleus-scm-forge = { path = "../nucleus-scm-forge" }
nucleus-tasks = { path = "../nucleus-tasks" }
nucleus-workspaces = { path = "../nucleus-workspaces" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
