[package]
name = "nucleus-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nucleus-agent-adapters = { path = "../nucleus-agent-adapters" }
nucleus-agent-protocol = { path = "../nucleus-agent-protocol" }
nucleus-command-policy = { path = "../nucleus-command-policy" }
nucleus-core = { path = "../nucleus-core" }
nucleus-engine = { path = "../nucleus-engine" }
nucleus-local-store = { path = "../nucleus-local-store" }
nucleus-memory = { path = "../nucleus-memory" }
nucleus-native-harness = { path = "../nucleus-native-harness" }
nucleus-orchestration = { path = "../nucleus-orchestration" }
nucleus-planning = { path = "../nucleus-planning" }
nucleus-projects = { path = "../nucleus-projects" }
nucleus-research = { path = "../nucleus-research" }
nucleus-scm-forge = { path = "../nucleus-scm-forge" }
nucleus-tasks = { path = "../nucleus-tasks" }
nucleus-workspaces = { path = "../nucleus-workspaces" }
blake3 = "1"
libc = "0.2"
ignore = "0.4"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "3.1.1"
tempfile = "3"
toml = "0.8"
ts-rs = { version = "11", features = ["serde-compat", "no-serde-warnings"] }

[dev-dependencies]
nucleus-contract-fixtures = { path = "../nucleus-contract-fixtures" }
