[package]
name = "nucleus-tasks"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nucleus-agent-protocol = { path = "../nucleus-agent-protocol" }
nucleus-core = { path = "../nucleus-core" }
nucleus-projects = { path = "../nucleus-projects" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
