[package]
name = "nucleus-desktop"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "nucleus_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
nucleus-local-store = { path = "../../../crates/nucleus-local-store" }
nucleus-server = { path = "../../../crates/nucleus-server" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11.2", features = [] }
